schedule json wip

--- a/src/schedule.html
+++ b/src/schedule.html
@@ -110,7 +110,7 @@
         <div id="daily" class="container tab-pane active">
           <br />
           <h6>19th March, 2023</h6>
-          <div class="container">
+          <div class="container" id="daily-container">
             <div class="row">
               <div class="col-3 border pt-3">
                 <p>09:00</p>
