--- a/src/search.html
+++ b/src/search.html
@@ -116,51 +116,7 @@
                 <h3 class="mb-3">Creative Digital Media and UX</h3>
                 <!-- Accordion with list of courses  -->
                 <div class="accordion my-2" id="accordionModules">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
-                      <button
-                        class="accordion-button"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne"
-                        aria-expanded="true"
-                        aria-controls="collapseOne"
-                      >
-                        Social Media Applications
-                      </button>
-                    </h2>
-                    <div
-                      id="collapseOne"
-                      class="accordion-collapse collapse show"
-                      aria-labelledby="headingOne"
-                      data-bs-parent="#accordionModules"
-                    >
-                      <div class="accordion-body">
-                        <ul class="list-group">
-                          <li class="list-group-item">ID: <b>MED9027</b></li>
-                          <li class="list-group-item">
-                            Semester: <b>2021-22</b>
-                          </li>
-                          <li class="list-group-item">
-                            Start Date: <b>September 1, 2021</b>
-                          </li>
-                          <li class="list-group-item">
-                            End Date: <b>August 31, 2022</b>
-                          </li>
-                          <li class="list-group-item">
-                            Lecturer: <b>Dr. Keith Gardiner</b>
-                          </li>
-                        </ul>
-                        <a
-                          class="btn btn-success btn-sm my-2"
-                          href="#"
-                          role="button"
-                        >
-                          Add to Schedule
-                        </a>
-                      </div>
-                    </div>
-                  </div>
+                  <!-- Inserted from Modules JSON files using AJAX -->
                 </div>
               </div>
 
