--- a/src/index.html
+++ b/src/index.html
@@ -206,61 +206,8 @@
               GrangeMobile has a number of features to help you get the most out
               of your time at TU Dublin.
             </p>
-
-            <!-- search feature card -->
-            <div class="card my-3">
-              <img
-                class="card-img-top"
-                src="assets/imgs/home-search.jpg"
-                alt="Card image"
-              />
-              <div class="card-body">
-                <h4 class="card-title">Search Modules</h4>
-                <p class="card-text">
-                  Search for courses and modules from the university catalogue.
-                  View their details and add them to your timetable.
-                </p>
-                <a href="search.html" class="btn btn-primary">Search Modules</a>
-              </div>
-            </div>
-
-            <!-- schedule feature card -->
-            <div class="card my-3">
-              <img
-                class="card-img-top"
-                src="assets/imgs/home-schedule.jpg"
-                alt="Card image"
-              />
-              <div class="card-body">
-                <h4 class="card-title">Schedule Your TimeTable</h4>
-                <p class="card-text">
-                  View your daily, weekly and monthly timetable and upcoming
-                  classes. View the location of your classes and their timings.
-                </p>
-                <a href="schedule.html" class="btn btn-primary"
-                  >Schedule TimeTable</a
-                >
-              </div>
-            </div>
-
-            <!-- classroom feature card -->
-            <div class="card my-3">
-              <img
-                class="card-img-top"
-                src="assets/imgs/home-classroom.jpg"
-                alt="Card image"
-              />
-              <div class="card-body">
-                <h4 class="card-title">Access Your Classroom</h4>
-                <p class="card-text">
-                  View your classroom and contact your students. You can also
-                  view the location of your classroom. You can send a group
-                  e-email to their college email address.
-                </p>
-                <a href="classroom.html" class="btn btn-primary"
-                  >Enter Classroom</a
-                >
-              </div>
+            <div id="feature-cards">
+              <!-- Inserted from Features JSON Files using AJAX -->
             </div>
           </div>
         </div>
