--- a/src/schedule.html
+++ b/src/schedule.html
@@ -111,21 +111,7 @@
           <br />
           <h6>19th March, 2023</h6>
           <div class="container" id="daily-container">
-            <div class="row">
-              <div class="col-3 border pt-3">
-                <p>09:00</p>
-                <hr />
-                <p>12:00</p>
-              </div>
-              <div class="col-9 border pt-3">
-                <h6>Social Media Application</h6>
-                <p>
-                  Room No. 206 | Grangegorman <br />
-                  TU294 | CDM & UX <br />
-                  3 hours | 20 Students
-                </p>
-              </div>
-            </div>
+            <!-- Inserted from Schedule JSON File -->
           </div>
         </div>
 
