--- a/src/schedule.html
+++ b/src/schedule.html
@@ -147,18 +147,7 @@
           <!-- Tab panes -->
           <div class="tab-content">
             <div class="tab-pane container active mt-3" id="monday">
-              <div class="row shadow-sm pt-2 my-3">
-                <div class="col-2">
-                  <h6>9:00</h6>
-                </div>
-                <div class="col-10">
-                  <h6>Introduction to Web Development</h6>
-                  <p>
-                    <i class="fa fa-location-dot me-1"></i> Room 306 -
-                    Grangegorman
-                  </p>
-                </div>
-              </div>
+              <!-- Inserted from schedule JSON file -->
             </div>
 
             <div class="tab-pane container fade" id="tuesday">
