--- a/src/schedule.html
+++ b/src/schedule.html
@@ -151,63 +151,19 @@
             </div>
 
             <div class="tab-pane container fade" id="tuesday">
-              <div class="row shadow-sm pt-2 my-3">
-                <div class="col-2">
-                  <h6>9:00</h6>
-                </div>
-                <div class="col-10">
-                  <h6>Introduction to Web Development</h6>
-                  <p>
-                    <i class="fa fa-location-dot me-1"></i> Room 306 -
-                    Grangegorman
-                  </p>
-                </div>
-              </div>
+              <!-- Inserted from schedule JSON file -->
             </div>
 
             <div class="tab-pane container fade" id="wednesday">
-              <div class="row shadow-sm pt-2 my-3">
-                <div class="col-2">
-                  <h6>9:00</h6>
-                </div>
-                <div class="col-10">
-                  <h6>Introduction to Web Development</h6>
-                  <p>
-                    <i class="fa fa-location-dot me-1"></i> Room 306 -
-                    Grangegorman
-                  </p>
-                </div>
-              </div>
+              <!-- Inserted from schedule JSON file -->
             </div>
 
             <div class="tab-pane container fade" id="thursday">
-              <div class="row shadow-sm pt-2 my-3">
-                <div class="col-2">
-                  <h6>9:00</h6>
-                </div>
-                <div class="col-10">
-                  <h6>Introduction to Web Development</h6>
-                  <p>
-                    <i class="fa fa-location-dot me-1"></i> Room 306 -
-                    Grangegorman
-                  </p>
-                </div>
-              </div>
+              <!-- Inserted from schedule JSON file -->
             </div>
 
             <div class="tab-pane container fade" id="friday">
-              <div class="row shadow-sm pt-2 my-3">
-                <div class="col-2">
-                  <h6>9:00</h6>
-                </div>
-                <div class="col-10">
-                  <h6>Introduction to Web Development</h6>
-                  <p>
-                    <i class="fa fa-location-dot me-1"></i> Room 306 -
-                    Grangegorman
-                  </p>
-                </div>
-              </div>
+              <!-- Inserted from schedule JSON file -->
             </div>
           </div>
         </div>
@@ -236,56 +192,8 @@
                 aria-labelledby="panelsStayOpen-headingOne"
               >
                 <div class="accordion-body">
-                  <ul class="list-group">
-                    <li class="list-group-item align-items-center">
-                      <div class="row">
-                        <div class="col-3">Mon</div>
-                        <div class="col-7">
-                          Social Media Applications
-                          <hr />
-                          Authoring Principles
-                        </div>
-                        <div class="col-2">
-                          <span class="badge bg-primary rounded-pill">2</span>
-                        </div>
-                      </div>
-                    </li>
-                    <li class="list-group-item align-items-center">
-                      <div class="row">
-                        <div class="col-3">Tue</div>
-                        <div class="col-7">Social Media</div>
-                        <div class="col-2">
-                          <span class="badge bg-primary rounded-pill">1</span>
-                        </div>
-                      </div>
-                    </li>
-                    <li class="list-group-item align-items-center">
-                      <div class="row">
-                        <div class="col-3">Wed</div>
-                        <div class="col-7">Social Media</div>
-                        <div class="col-2">
-                          <span class="badge bg-primary rounded-pill">1</span>
-                        </div>
-                      </div>
-                    </li>
-                    <li class="list-group-item align-items-center">
-                      <div class="row">
-                        <div class="col-3">Thu</div>
-                        <div class="col-7">Social Media</div>
-                        <div class="col-2">
-                          <span class="badge bg-primary rounded-pill">1</span>
-                        </div>
-                      </div>
-                    </li>
-                    <li class="list-group-item align-items-center">
-                      <div class="row">
-                        <div class="col-3">Fri</div>
-                        <div class="col-7">Social Media</div>
-                        <div class="col-2">
-                          <span class="badge bg-primary rounded-pill">1</span>
-                        </div>
-                      </div>
-                    </li>
+                  <ul class="list-group" id="week1">
+                    <!-- Inserted from schedule JSON file -->
                   </ul>
                 </div>
               </div>
@@ -309,7 +217,9 @@
                 aria-labelledby="panelsStayOpen-headingTwo"
               >
                 <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong>
+                  <ul class="list-group" id="week2">
+                    <!-- Inserted from schedule JSON file -->
+                  </ul>
                 </div>
               </div>
             </div>
@@ -332,7 +242,9 @@
                 aria-labelledby="panelsStayOpen-headingThree"
               >
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong>
+                  <ul class="list-group" id="week3">
+                    <!-- Inserted from schedule JSON file -->
+                  </ul>
                 </div>
               </div>
             </div>
@@ -355,7 +267,9 @@
                 aria-labelledby="panelsStayOpen-headingFour"
               >
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong>
+                  <ul class="list-group" id="week4">
+                    <!-- Inserted from schedule JSON file -->
+                  </ul>
                 </div>
               </div>
             </div>
@@ -378,7 +292,9 @@
                 aria-labelledby="panelsStayOpen-headingFive"
               >
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong>
+                  <ul class="list-group" id="week5">
+                    <!-- Inserted from schedule JSON file -->
+                  </ul>
                 </div>
               </div>
             </div>
