--- a/src/index.html
+++ b/src/index.html
@@ -210,6 +210,11 @@
               <!-- Inserted from Features JSON Files using AJAX -->
             </div>
           </div>
+          <p class="text-center">Developed using jQuery & Bootstrap 5</p>
+          <p class="text-center">
+            <i class="fa fa-copyright" aria-hidden="true"></i> Karan Gupta
+            D22124440 TU Dublin
+          </p>
         </div>
       </div>
 
