--- a/src/classroom.html
+++ b/src/classroom.html
@@ -169,7 +169,7 @@
             <div class="modal-body">
               <!-- add student form -->
               <!-- create an onsubmit function that enters this information to the student list -->
-              <form class="was-validated">
+              <form class="was-validated" id="add-student">
                 <div class="mb-3 mt-3">
                   <label for="uname" class="form-label">Name:</label>
                   <input
@@ -262,14 +262,14 @@
             <!-- modal body -->
             <div class="modal-body">
               <!-- new message form -->
-              <form action="" class="was-validated">
+              <form id="send-message" class="was-validated">
                 <div class="my-2">
-                  <label for="newMsgTitle" class="form-label">
+                  <label for="msg-title" class="form-label">
                     Message Title:
                   </label>
                   <textarea
                     name="message"
-                    id="newMsgTitle"
+                    id="msg-title"
                     rows="1"
                     class="form-control"
                     required
@@ -281,10 +281,12 @@
                   </div>
                 </div>
                 <div class="my-2">
-                  <label for="newMsg" class="form-label"> Your Message: </label>
+                  <label for="msg-body" class="form-label">
+                    Your Message:
+                  </label>
                   <textarea
                     name="message"
-                    id="newMsg"
+                    id="msg-body"
                     rows="5"
                     class="form-control"
                     required
@@ -301,10 +303,15 @@
                   >
                   <select class="form-select" id="class-ppl" name="class-list">
                     <!-- Student Email List Updated from students JSON file -->
+                    <option value="All Students">All Students</option>
                   </select>
                   <div class="valid-feedback">Valid.</div>
                   <div class="invalid-feedback">Please select an option</div>
-                  <button type="submit" class="btn btn-success float-end">
+                  <button
+                    type="submit"
+                    class="btn btn-success float-end"
+                    id="message-send"
+                  >
                     Send Message
                   </button>
                 </div>
@@ -316,6 +323,7 @@
                 type="button"
                 class="btn btn-danger"
                 data-bs-dismiss="modal"
+                id="close-message"
               >
                 Close
               </button>
