--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
     <capacitor-welcome></capacitor-welcome>
 
     <header id="header">
+      <!-- Bootstrap Navbar -->
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"> <b> G</b>range<b>M</b>obile</a>
@@ -98,6 +99,7 @@
     <main>
       <!-- welcome message -->
       <div class="container">
+        <!-- Bootstrap Grid -->
         <div class="row bg-primary-subtle p-3">
           <div class="col">
             <h1 class="text-left">Welcome to GrangeMobile</h1>
@@ -106,6 +108,7 @@
               Technological University, Dublin.
             </p>
 
+            <!-- Bootstrap Collapse Component -->
             <button
               type="button"
               class="btn btn-outline-primary"
@@ -124,13 +127,13 @@
         </div>
       </div>
 
-      <!-- carousel images -->
+      <!-- Bootstrap carousel images component -->
       <div class="container">
         <div class="row bg-primary-subtle">
           <div class="col">
-            <!-- Carousel -->
+            <!-- Bootstrap Carousel -->
             <div id="demo" class="carousel slide" data-bs-ride="carousel">
-              <!-- Indicators/dots -->
+              <!-- Bootstrap Indicators/dots -->
               <div class="carousel-indicators">
                 <button
                   type="button"
@@ -150,7 +153,7 @@
                 ></button>
               </div>
 
-              <!-- The slideshow/carousel -->
+              <!-- The Bootstrap slideshow/carousel -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
@@ -175,7 +178,7 @@
                 </div>
               </div>
 
-              <!-- Left and right controls/icons -->
+              <!-- Bootstrap Left and right controls/icons -->
               <button
                 class="carousel-control-prev"
                 type="button"
@@ -197,8 +200,9 @@
         </div>
       </div>
 
-      <!-- features -->
+      <!-- feature cards -->
       <div class="container">
+        <!-- Bootstrap Grid -->
         <div class="row bg-primary-subtle p-3">
           <div class="col">
             <h1 class="text-left mt-3">Features</h1>
@@ -207,7 +211,7 @@
               of your time at TU Dublin.
             </p>
             <div id="feature-cards">
-              <!-- Inserted from Features JSON Files using AJAX -->
+              <!-- HTML Inserted from Features JSON Files using AJAX and jQuery -->
             </div>
           </div>
           <p class="text-center">Developed using jQuery & Bootstrap 5</p>
@@ -225,6 +229,7 @@
 
     <!-- bottom navigation -->
     <footer id="footer">
+      <!-- Bootstrap Footer Nav Bar -->
       <nav class="navbar fixed-bottom bg-dark-subtle">
         <div class="container-fluid justify-content-evenly">
           <ul class="navbar-nav d-flex flex-row gap-4">
@@ -287,6 +292,7 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <!-- Script File Link -->
     <script type="text/javascript" src="script.js" defer></script>
   </body>
 </html>
