--- a/src/schedule.html
+++ b/src/schedule.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <header id="header">
+      <!-- Bootstrap Top Nav Bar -->
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"> <b> G</b>range<b>M</b>obile</a>
@@ -84,7 +85,7 @@
         </div>
       </div>
 
-      <!-- Toggle-able Tabs for different schedule views -->
+      <!-- Bootstrap Toggle-able Tabs for different schedule views -->
 
       <!-- Nav tabs -->
       <ul
@@ -304,6 +305,7 @@
     </main>
 
     <footer id="footer">
+      <!-- bootstrap Bottom Nav Bar -->
       <nav class="navbar fixed-bottom bg-dark-subtle">
         <div class="container-fluid justify-content-evenly">
           <ul class="navbar-nav d-flex flex-row gap-4">
