--- a/src/search.html
+++ b/src/search.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <header id="header">
+      <!-- Bootstrap Top Nav Bar -->
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"> <b> G</b>range<b>M</b>obile</a>
@@ -93,6 +94,7 @@
       </div>
 
       <div class="container">
+        <!-- Bootstrap Cards -->
         <div id="course-cards">
           <!-- Inserted from Courses JSON File -->
         </div>
@@ -136,6 +138,7 @@
       </div>
     </main>
     <footer id="footer">
+      <!-- Bootstrap Bottom Nav Bar -->
       <nav class="navbar fixed-bottom bg-dark-subtle">
         <div class="container-fluid justify-content-evenly">
           <ul class="navbar-nav d-flex flex-row gap-4">
